--- a/redbook-auth/pom.xml
+++ b/redbook-auth/pom.xml
@@ -33,6 +33,12 @@
             <groupId>com.ymkx</groupId>
             <artifactId>redbook-common</artifactId>
         </dependency>
+
+        <!-- 业务接口日志组件 -->
+        <dependency>
+            <groupId>com.ymkx</groupId>
+            <artifactId>redbook-starter-biz-operationlog</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
