--- a/redbook-framework/redbook-common/pom.xml
+++ b/redbook-framework/redbook-common/pom.xml
@@ -38,6 +38,11 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-ai</artifactId>
+        </dependency>
     </dependencies>
 </project>
 
