--- a/redbook-framework/redbook-common/pom.xml
+++ b/redbook-framework/redbook-common/pom.xml
@@ -43,6 +43,12 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-ai</artifactId>
         </dependency>
+
+        <!-- AOP 切面 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 </project>
 
