--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,17 @@
                 <artifactId>redbook-domain</artifactId>
                 <version>${revision}</version>
             </dependency>
+            <!-- 业务接口日志组件 -->
+            <dependency>
+                <groupId>com.ymkx</groupId>
+                <artifactId>redbook-starter-biz-operationlog</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ymkx</groupId>
+                <artifactId>redbook-starter-jackson</artifactId>
+                <version>${revision}</version>
+            </dependency>
 
             <!-- 第三方服务 -->
             <dependency>
@@ -107,12 +118,6 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
                 <version>${jackson.version}</version>
-            </dependency>
-            <!-- 业务接口日志组件 -->
-            <dependency>
-                <groupId>com.ymkx</groupId>
-                <artifactId>redbook-starter-biz-operationlog</artifactId>
-                <version>${revision}</version>
             </dependency>
             <!-- Mybatis Plus -->
             <dependency>
