--- a/redbook-framework/pom.xml
+++ b/redbook-framework/pom.xml
@@ -3,7 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <!-- 指定父项目 -->
     <parent>
         <groupId>com.ymkx</groupId>
@@ -23,6 +22,8 @@
         <module>redbook-common</module>
         <!-- 接口日志组件 -->
         <module>redbook-starter-biz-operationlog</module>
+        <!-- jackson 组件 -->
+        <module>redbook-starter-jackson</module>
     </modules>
 
 </project>
