--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <hutool.version>5.8.38</hutool.version>
         <druid.version>1.2.21</druid.version>
         <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
+        <sa-token.version>1.38.0</sa-token.version>
     </properties>
 
     <!-- 统一依赖管理 -->
@@ -149,6 +150,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-3-starter</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+            <!-- Sa-Token 权限认证 -->
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-spring-boot3-starter</artifactId>
+                <version>${sa-token.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
