--- a/redbook-auth/pom.xml
+++ b/redbook-auth/pom.xml
@@ -49,6 +49,12 @@
             <groupId>com.ymkx</groupId>
             <artifactId>redbook-starter-jackson</artifactId>
         </dependency>
+
+        <!-- Sa-Token 权限认证 -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
